@@ -1,3 +1,8 @@
+2002-08-17 Simon Waters <simon@wretched.demon.co.uk>
+
+	* Bug code bug introduced in development version
+	  that breaks if no book is present in XBOARD
+	  version.
 
 2002-08-02 Simon Waters <simon@wretched.demon.co.uk>
 
